# facedetect

./: CMakeLists.txt
cmake/: FindQwt6.cmake
doc/doxygen/: Doxyfile  groups.dox
doc/html/shared/: footer.html  header.html  style.css
locale/: facedetect_sk_SK.ts
src/: main.cpp
src/core/: DetectorImageProvider.cpp  DetectorImageProvider.h  FaceBrowserModel.cpp  FaceBrowserModel.h  FaceFileScanner.cpp  FaceFileScanner.h  FaceImageProvider.cpp  FaceImageProvider.h  FileScanner.cpp  FileScanner.h  FilterImageProvider.cpp  FilterImageProvider.h
src/gui/console/: ConsoleInterface.cpp  ConsoleInterface.h
src/gui/qml/: CentralWindow.qml  DatabaseSettings.qml  Detection.qml  ExpandButton.qml  FaceDatabaseView.qml  FaceDelegate.qml  FaceMetadata.qml  FileSelector.qml  FiltersEdit.qml  GroupBox.qml  LineEdit.qml  LoadingIndicator.qml  ProgressBar.qml  ProgressTitleItem.qml  PushButton.qml  QmlWin.cpp  QmlWin.h  ScanningInfoWidget.qml  SpinBox.qml  StartPanel.qml  Switch.qml  TabWidget.qml  TitleWidget.qml  Training.qml  TransformationDelegate.qml  main.qml  qml.qrc
src/gui/qml/filters/: GaborFilterDelegate.qml  GaborFilterSettings.qml  GraphicFilterSettings.qml  IlluminationFilterSettings.qml
src/gui/qml/img/: button.sci  groupbox.sci  innerbg.sci  input.sci  item_header.sci  pbutton_checked.sci  pbutton_normal.sci  pbutton_pressed.sci  progress-inner.sci  progress-outer.sci  tab-left-aitem.sci  tab-left-bg.sci  tab-left-item.sci  title_border.sci
src/gui/qml/plugins/: QmlCursorArea.cpp  QmlCursorArea.h  QmlFaceDetectPlugin.cpp  QmlFaceDetectPlugin.h  QmlFileChooser.cpp  QmlFileChooser.h  QmlQwtPlotCurve.cpp  QmlQwtPlotCurve.h  QmlQwtPlotWidget.cpp  QmlQwtPlotWidget.h
src/libfacedetect/: Align.cpp  Align.h  BPNeuralNet.cpp  BPNeuralNet.h  FaceDetector.cpp  FaceDetector.h  FaceFileReader.cpp  FaceFileReader.h  FaceFileScanner.cpp  FaceFileScanner.h  FaceStructuredNet.cpp  FaceStructuredNet.h  FileScanner.cpp  FileScanner.h  GaborFilter.cpp  GaborFilter.h  GrayscaleFilter.cpp  GrayscaleFilter.h  IlluminationFilter.cpp  IlluminationFilter.h  ImageDataReader.cpp  ImageDataReader.h  ImageFileScanner.cpp  ImageFileScanner.h  ImageFilter.cpp  ImageFilter.h  ImageFilterBase.h  ImageSegmenter.cpp  ImageSegmenter.h  NetTrainer.cpp  NetTrainer.h  NeuralNet.cpp  NeuralNet.h  SobelFilter.cpp  SobelFilter.h  TrainingDataReader.cpp  TrainingDataReader.h  TrainingImageDatabase.cpp  TrainingImageDatabase.h  directory.dox
src/libfacedetect/serialization/: LapackSerialization.h
src/libfacedetect/utils/: LapackSerialization.h  PolygonRasterizer.cpp  PolygonRasterizer.h  QtSerialization.h
src/qml/: ControlPointsDisplay.qml  FaceDelegate.qml  FaceMetadata.qml  InfoListItem.qml  PushButton.qml  QmlWin.cpp  QmlWin.h  StartPanel.qml  TransformationDelegate.qml  main.qml  qml.qrc
src/qml/img/: button-down.sci  imgbackground.sci  innerbg.sci
